Add bigger header for screen sizes less than 1000px

--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     <body>
         <section class="hero">
             <nav>
-                <img class="logo" src="Z:\source\repos\James_Wang_MD\images\logo.png" alt="James C Wang Logo">
-                <ul>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#Portfolio">Portfolio</a></li>
-                    <li><a href="#Contact">Contact</a></li>
-                </ul>
+                <img class="logo" src="images\logo.png" alt="James C Wang Logo">
+                <div class="nav-items">
+                    <ul>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#Portfolio">Portfolio</a></li>
+                        <li><a href="#Contact">Contact</a></li>
+                    </ul>
+
+                </div>
             </nav>
             <div class="hero-area">
                 <div class="hero-text-left">
