--- a/index.html
+++ b/index.html
@@ -74,9 +74,11 @@
             </div>
         </section>
         <footer class="contact-subsection" id="Contact"><div class="portfolio-h2"><h1>Contact</h1></div>
-            <form>
+            <form action="https://formsubmit.co/brandon.karwai.lai@gmail.com" method="POST">
+                <input type="hidden" name="_subject" value="New Customer Consultation Request">
                 <input type="text" id="name" placeholder="Your Name" required>
                 <input type="email" id="email" placeholder="Email Address" required>
+                <input type="hidden" name="_next" value="https://brandonprograms.github.io/James_Wang_MD/thankyou.html">
                 <input type="text" id="phone" placeholder="Phone Number" required>
                 <textarea id="message" rows="4" placeholder = "How can we help you?"></textarea>
                 <button type="submit">Send</button>
