Add name tags to all form items

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
         <footer class="contact-subsection" id="Contact"><div class="portfolio-h2"><h1>Contact</h1></div>
             <form action="https://formsubmit.co/008e35bffdfa05643d02e20ecec0c970" method="POST">
                 <input type="hidden" name="_subject" value="New Customer Consultation Request">
-                <input type="text" id="name" placeholder="Your Name" required>
-                <input type="email" id="email" placeholder="Email Address" required>
+                <input type="text" name="name" id="name" placeholder="Your Name" required>
+                <input type="email" name="email" id="email" placeholder="Email Address" required>
                 <input type="hidden" name="_next" value="https://brandonprograms.github.io/James_Wang_MD/thankyou.html">
-                <input type="text" id="phone" placeholder="Phone Number" required>
-                <textarea id="message" rows="4" placeholder = "How can we help you?"></textarea>
+                <input type="text" name="phone" id="phone" placeholder="Phone Number" required>
+                <textarea id="message" name="message" rows="4" placeholder = "How can we help you?"></textarea>
                 <button type="submit">Send</button>
             </form>
         </footer>
