Fix Overflow, Email, 4th Image

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
                 </div>
                 <div class="project-card">
                     <h3>Tear Filler</h3>
-                    <a href="images/BeforeAfter4.jpg">
-                        <img class="project-image" src="images/BeforeAfter4.jpg">
+                    <a href="images/BeforeAfter4.PNG">
+                        <img class="project-image" src="images/BeforeAfter4.PNG">
                     </a>
                 </div>
             </div>
         </section>
         <footer class="contact-subsection" id="Contact"><div class="portfolio-h2"><h1>Contact</h1></div>
-            <form action="https://formsubmit.co/Maryclaire.rasmussen@nm.org" method="POST">
+            <form action="https://formsubmit.co/d44bb5003cf25608849225e36a701e43" method="POST">
                 <input type="hidden" name="_subject" value="New Customer Consultation Request">
                 <input type="text" name="name" id="name" placeholder="Your Name" required>
                 <input type="email" name="email" id="email" placeholder="Email Address" required>
